# suri-sprint

./: Cargo.toml
resources/: conf.ron  controls.ron  meow-shockwave.xcf  milo-spritesheet.xcf  suri-spritesheet.xcf  suri-spritesheet_backup.xcf
resources/docs/: game_state.md  main.md
resources/entities/: anim1-sprite.ron  anim1.ron  ball.ron  bowl.ron  box.ron  button-base.ron  button-trigger.ron  closed_box.ron  cloud-layer.ron  dark-tile-bg.ron  dialog-purple-bg.ron  electric-bg.ron  empty_box_bg.ron  empty_box_fg.ron  exit-tile-white.ron  exit-tile.ron  exit.ron  exit_crack.ron  ghost.ron  ghost_anim.ron  grass-block-light.ron  grass-long-light.ron  grid_structure.ron  lemming.ron  light-ball.ron  meow.ron  milo.ron  mouse.ron  overlay.ron  plant_bunch_01.ron  plant_bunch_02.ron  platform_shadow_1.ron  point_anim1.ron  portal-front-green.ron  portal-front-purple.ron  portal-front-red.ron  portal-front-yellow.ron  portal-side-purple.ron  portal-side-red.ron  portal.ron  (+16 more)
resources/images/: happy-birthday.xcf  meow-shockwave.xcf  point_base.xcf  suri-spritesheet.xcf  tile-exit-1-white.xcf  tile-exit-1.xcf
resources/levels/: a.ron  b.ron  blocks_a.ron  blocks_b.ron  blocks_c.ron  button_test.ron  c.ron  coin_room.ron  happy-birthday.ron  loading.ron  logic.ron  mazea.ron  mazeb.ron  overview_1.ron  start.ron  start_a.ron  start_b.ron  test.ron  test_old.ron  test_small.ron  testa.ron
resources/psys/: a.ron  b.ron  d.ron  h.ron  (+13 more)
src/: audio.rs  conf-deprecated.ron  conf.ron  conf.rs  depricated.rs  game_state.rs  input.rs  main.rs  physics.rs  render.rs  world.rs
(+92 files in other folders)
