[package]
name = "suri_sprint"
version = "0.0.1"
authors = ["eggmunkee <eggmunkee@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "~0.5.1"
specs = { version = "0.16.1" }
specs-derive = "0.4.1"
rand = "0.7.3"
winit = "~0.19.5"
ron = "0.5.1"
wrapped2d = "0.4.0"
serde = "1.0.105"
gfx = "0.18.2"

[profile.dev]
opt-level = 2